_content/tour fix: Ensure hover on file menu button has proper color in dark mode

--- a/_content/tour/static/css/app.css
+++ b/_content/tour/static/css/app.css
@@ -254,7 +254,7 @@ ul {
     background-color: #fafafa;
 }
 [data-theme='dark'] .menu-button:hover {
-    background-color: #D9D9D9;
+    background-color: #313131;
     color: #53B4DB;
     text-decoration: none;
 }
